src/test/deca/context/invalid/created/decl_class/field_eq_met.deca
// Description :
//    met declarée deux fois
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10 : (2.4) L’identificateur neth est déjà défini

class A{
void meth(){}
int meth;
}